--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,22 +12,22 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
-        "vue": "^3.3.11",
-        "vue-router": "^4.2.5",
-        "pinia": "^2.1.7",
+        "@vueuse/core": "^10.7.1",
         "axios": "^1.6.2",
-        "vue-toastification": "^2.0.0-rc.5",
         "chart.js": "^4.4.1",
-        "vue-chartjs": "^5.3.0",
         "date-fns": "^3.0.6",
-        "@vueuse/core": "^10.7.1"
+        "pinia": "^2.1.7",
+        "vue": "^3.3.11",
+        "vue-chartjs": "^5.3.0",
+        "vue-router": "^4.2.5",
+        "vue-toastification": "^2.0.0-rc.5"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^4.5.2",
-        "vite": "^5.0.8",
+        "@vitejs/plugin-vue": "^6.0.2",
+        "@vue/eslint-config-prettier": "^9.0.0",
         "eslint": "^8.56.0",
         "eslint-plugin-vue": "^9.19.2",
         "prettier": "^3.1.1",
-        "@vue/eslint-config-prettier": "^9.0.0"
+        "vite": "^7.2.4"
     }
 }
