--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,3 +16,22 @@ pytest-asyncio==0.24.0
 httpx==0.28.1
 black==24.10.0
 flake8==7.1.1
+
+# Agentic Architecture Dependencies
+# LLM Integration
+openai>=1.0.0
+tiktoken>=0.5.2
+
+# RAG & Vectorstore
+langchain>=0.1.0
+langchain-community>=0.0.20
+faiss-cpu>=1.7.4
+sentence-transformers>=2.2.2
+
+# Document Processing
+pypdf>=3.17.0
+python-docx>=1.1.0
+pyyaml>=6.0
+
+# Additional utilities
+numpy>=1.24.0
