--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "axios": "^1.6.2",
         "chart.js": "^4.4.1",
         "date-fns": "^3.0.6",
+        "marked": "^17.0.1",
         "pinia": "^2.1.7",
         "vue": "^3.3.11",
         "vue-chartjs": "^5.3.0",
