--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/eslint-config-prettier": "^9.0.0",
+        "esbuild": "^0.21.5",
         "eslint": "^8.56.0",
         "eslint-plugin-vue": "^9.19.2",
         "prettier": "^3.1.1",
