--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,19 +19,19 @@ flake8==7.1.1
 
 # Agentic Architecture Dependencies
 # LLM Integration
-openai>=1.0.0
-tiktoken>=0.5.2
+openai==1.57.4
+tiktoken==0.8.0
 
 # RAG & Vectorstore
-langchain>=0.1.0
-langchain-community>=0.0.20
-faiss-cpu>=1.7.4
-sentence-transformers>=2.2.2
+langchain==0.3.13
+langchain-community==0.3.13
+faiss-cpu==1.9.0.post1
+sentence-transformers==3.3.1
 
 # Document Processing
-pypdf>=3.17.0
-python-docx>=1.1.0
-pyyaml>=6.0
+pypdf==5.1.0
+python-docx==1.1.2
+pyyaml==6.0.2
 
 # Additional utilities
-numpy>=1.24.0
+numpy==2.2.1
